Added new styled main dash page

--- a/assets/dropdown.css
+++ b/assets/dropdown.css
@@ -2,25 +2,27 @@
 
 #drop_down_card {
     position: absolute;
-    top: 0px;
-
+    top: 80px;
     z-index: 9;
     width: 300px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #f7fafa;
-    margin-left: 0px
+    margin-left: 10px;
+    width: 250px;
+
+
 
 }
 
 
 /* Media query for screens with a maximum width of 500 pixels */
-@media screen and (max-width: 14px) {
+@media screen and (max-width: 990px) {
     #drop_down_card {
         position: absolute;
         z-index: 9;
         border-radius: 10px;
 
-        top: 53vh; /* Adjust the top position for smaller screens */
+        top: 55vh; /* Adjust the top position for smaller screens */
         left: 20px; /* Adjust the left position for smaller screens */
     }
 }
