--- a/assets/map.css
+++ b/assets/map.css
@@ -15,6 +15,9 @@
      margin:0px;
      border-radius: 10px;
      overflow: hidden;
+     border: 2px solid #ccc;
+     box-shadow: 5px 5px 5px lightblue;
+
 }
 
 /* Default div on main page that holds the map div */
@@ -23,6 +26,7 @@
      margin-top: 10px;
      height: 60vh;
      border-radius: 10px;
+
 
 }
 
