--- a/assets/map.css
+++ b/assets/map.css
@@ -1,11 +1,10 @@
 
-/* Default dcc.graph style */
 #example-map  {
      position: relative;
      width: 100%;
      height: 100%;
      display: block;
-
+     margin:0px;
 
 }
 
@@ -17,6 +16,7 @@
      overflow: hidden;
      border: 2px solid #ccc;
      box-shadow: 5px 5px 5px lightblue;
+
 
 }
 
