--- a/assets/card.css
+++ b/assets/card.css
@@ -153,7 +153,7 @@
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightblue;
     background-color: #d4f7ff;
-    margin-bottom: 5px;
+    margin-top: 5px;
 
 
 }
