--- a/assets/map.css
+++ b/assets/map.css
@@ -1,3 +1,36 @@
+#change_range_radio_button {
+ position: absolute;
+    top: 560px;
+    left: 0;
+    width: 200px;
+    height: 50px;
+    z-index: 200;
+    border-radius: 10px;
+    border-width: 10px;
+    border-color: black;
+    box-shadow: 5px 5px 5px lightblue;
+    background-color: white;
+}
+
+
+@media screen and (min-width: 0px) and (max-width:950px) {
+    #change_range_radio_button {
+        position: relative;
+        top: 540px;
+        left: 0px;
+        width: 300px;
+        height: 60px;
+        z-index: 100;
+        border-radius: 10px;
+        border-width: 10px;
+        border-color: black;
+        box-shadow: 5px 5px 5px lightblue;
+        background-color: white; Corrected the property name to 'padding-top' */
+        /* Adjust font size for screens in this range */
+    }
+}
+
+
 
 #example-map  {
      position: relative;
