--- a/assets/map.css
+++ b/assets/map.css
@@ -35,7 +35,7 @@
 #example-map  {
      position: relative;
      width: 100%;
-     height: 100%;
+     height=850px;
      display: block;
      margin:0px;
 
