Increased the iterpolation for profile envelope from 1m to 0.25m and cut off at max min chainage. Added profile envelope to line chart legend and report

--- a/assets/charts.css
+++ b/assets/charts.css
@@ -98,6 +98,126 @@
     }
 }
 
+/* the profile envelope checklist */
+#Range_plot{
+ position: absolute;
+    top: 10px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    width: 120px;
+    height: 25px;
+    z-index: 100;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px lightblue;
+    padding-top: 5px; /* Adjust padding top */
+    padding-right: 5px; /* Adjust padding right */
+    padding-bottom: 8px; /* Adjust padding bottom */
+    padding-left: 8px; /* Adjust padding left */
+    font-size: 13px;
+}
+
+/* Media query for smaller screens (adjust max-width and font size as needed) */
+@media screen and (min-width: 951px) and (max-width: 1400px) {
+   #Range_plot{
+    position: absolute;
+    top: 30px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    width: 120px;
+    height: 25px;
+    z-index: 100;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px lightblue;
+    padding-top: 5px; /* Adjust padding top */
+    padding-right: 5px; /* Adjust padding right */
+    padding-bottom: 8px; /* Adjust padding bottom */
+    padding-left: 8px; /* Adjust padding left */
+    font-size: 13px;
+}
+}
+
+@media screen and (min-width: 0px) and (max-width:950px) {
+
+#Range_plot{
+ position: absolute;
+    top: 35px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    width: 120px;
+    height: 25px;
+    z-index: 100;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px lightblue;
+    padding-top: 5px; /* Adjust padding top */
+    padding-right: 5px; /* Adjust padding right */
+    padding-bottom: 8px; /* Adjust padding bottom */
+    padding-left: 8px; /* Adjust padding left */
+    font-size: 13px;
+}
+
+}
+
+#error-bar-dropdown{
+ position: absolute;
+    top: 10px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    width: 120px;
+    height: 25px;
+    z-index: 100;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px lightblue;
+    padding-top: 5px; /* Adjust padding top */
+    padding-right: 5px; /* Adjust padding right */
+    padding-bottom: 8px; /* Adjust padding bottom */
+    padding-left: 8px; /* Adjust padding left */
+    font-size: 13px;
+}
+
+/* Media query for smaller screens (adjust max-width and font size as needed) */
+@media screen and (min-width: 951px) and (max-width: 1400px) {
+   #error-bar-dropdown{
+    position: absolute;
+    top: 30px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    width: 120px;
+    height: 25px;
+    z-index: 100;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px lightblue;
+    padding-top: 5px; /* Adjust padding top */
+    padding-right: 5px; /* Adjust padding right */
+    padding-bottom: 8px; /* Adjust padding bottom */
+    padding-left: 8px; /* Adjust padding left */
+    font-size: 13px;
+}
+}
+
+@media screen and (min-width: 0px) and (max-width:950px) {
+
+#error-bar-dropdown{
+ position: absolute;
+    top: 30px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    width: 120px;
+    height: 25px;
+    z-index: 100;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px lightblue;
+    padding-top: 5px; /* Adjust padding top */
+    padding-right: 5px; /* Adjust padding right */
+    padding-bottom: 8px; /* Adjust padding bottom */
+    padding-left: 8px; /* Adjust padding left */
+    font-size: 13px;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
 /* ERROR BAR PLOT CSS */
 
 #main_dash_error_bar_div {
