--- a/assets/card.css
+++ b/assets/card.css
@@ -19,6 +19,7 @@
     color: black;
     text-align: left;
     font-weight: bold;
+     font-family: 'Calibri', sans-serif;
 }
 
 #survey_unit_card {
@@ -27,7 +28,9 @@
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightblue;
     text-align: center;
-    font-weight: bold;}
+    font-weight: bold;
+     font-family: 'Calibri', sans-serif;
+     }
 
 
 /* Media query for smaller screens (adjust max-width and font size as needed) */
@@ -40,6 +43,7 @@
         color:black;
         text-align: left;
         font-weight:bold;
+        font-family: 'Calibri', sans-serif;
 
         /* Adjust font size for smaller screens */
     }
@@ -53,7 +57,7 @@
         box-shadow: 5px 5px 5px lightblue;
         text-align: center;
         font-weight: bold;/* Different font size for survey_unit_card */
-        /* Other specific styles for survey_unit_card */
+         font-family: 'Calibri', sans-serif;
     }
 }
 
@@ -66,7 +70,8 @@
         box-shadow: 5px 5px 5px lightblue;
         color:black;
         text-align: left;
-        font-weight:bold;/* Adjust font size for screens in this range */
+        font-weight:bold;
+        font-family: 'Calibri', sans-serif;
     }
 
     #survey_unit_card {
@@ -78,6 +83,7 @@
         box-shadow: 5px 5px 5px lightblue;
         text-align: center;
         font-weight: bold;
+        font-family: 'Calibri', sans-serif;
         /* Different font size for survey_unit_card */
         /* Other specific styles for survey_unit_card */
     }
@@ -93,7 +99,8 @@
         box-shadow: 5px 5px 5px lightblue;
         color:black;
         text-align: left;
-        font-weight:bold;/* Adjust font size for screens in this range */
+        font-weight:bold;
+         font-family: 'Calibri', sans-serif;
     }
 
     #survey_unit_card {
@@ -104,7 +111,8 @@
         border-radius: 10px;
         box-shadow: 5px 5px 5px lightblue;
         text-align: center;
-        font-weight: bold;/* Different font size for survey_unit_card */
+        font-weight: bold;
+        font-family: 'Calibri', sans-serif;
         /* Other specific styles for survey_unit_card */
     }
 }
@@ -128,6 +136,7 @@
     color: blue;
     margin: 0px 10px 10px 0px;
     font-weight: bold;
+    font-family: 'Calibri', sans-serif;
 
 }
 
@@ -140,6 +149,7 @@
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightblue;
     background-color: #d4f7ff;
+     font-family: 'Calibri', sans-serif;
 
 
 }
@@ -154,6 +164,7 @@
     box-shadow: 5px 5px 5px lightblue;
     background-color: #d4f7ff;
     margin-top: 5px;
+     font-family: 'Calibri', sans-serif;
 
 
 }
@@ -170,6 +181,7 @@
       border-radius: 10px;
     box-shadow: 5px 5px 5px lightblue;
     background-color: #d4f7ff;
+     font-family: 'Calibri', sans-serif;
 }
 
 
@@ -181,6 +193,7 @@
          box-shadow: 5px 5px 5px lightblue;
          background-color: #d4f7ff;
          margin: 10px;/* Adjust font size for smaller screens */
+          font-family: 'Calibri', sans-serif;
     }
 }
 
@@ -192,6 +205,7 @@
         box-shadow: 5px 5px 5px lightblue;
         background-color: #d4f7ff;
         margin: 10px;/* Adjust font size for screens in this range */
+         font-family: 'Calibri', sans-serif;
     }
 }
 
@@ -204,6 +218,7 @@
         box-shadow: 5px 5px 5px lightblue;
         background-color: #d4f7ff;
         margin: 10px;/* Adjust font size for screens in this range */
+          font-family: 'Calibri', sans-serif;
     }
 }
 }
